--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Crystals Collector Game</h1>
 
     <p>You will be given a random number at the start of the game.</p>
-    <p>There are four crystals below. By clicking on a crystal you will add a spoesific amount of points to your score.</p>
+    <p>There are four crystals below. By clicking on a crystal you will add a spesific amount of points to your score.</p>
     <p>You win the game by matching your score to a random number. You lose the game if your score goes over the random number. </p>
     <p>The value of each crystal is hidden from you until you click on it.</p>
     <p>Each time the game restarts, the values of each crystal will change.</p>
