work in progrgess

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <img id="img3" class="crystalimg" src="assets/images/image3.jpg" alt="third_crystal">
     <img id="img4" class="crystalimg" src="assets/images/image4.jpg" alt="last_one">
 
-    
+    <p id="target-number"></p>
+    <p id="users-current-score">Your Total Score Is: </p>
+    <h3 id="wins"></h3>
+    <h3 id="losses"></h3>
 </body>
 </html>
