working on button scoring. added some minor css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <p id="target-number"></p>
     <p id="users-current-score">Your Total Score Is: </p>
-    <h3 id="wins"></h3>
-    <h3 id="losses"></h3>
+    <h3 id="wins">Wins: </h3>
+    <h3 id="losses">Losses:</h3>
 </body>
 </html>
