--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
     <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
-    <script src="assets/javascript/game.js"></script>
-
+    
     <title>Crystals Collector Game</title>
 
 </head>
@@ -26,9 +25,14 @@
     <img id="img3" class="crystalimg" src="assets/images/image3.jpg" alt="third_crystal">
     <img id="img4" class="crystalimg" src="assets/images/image4.jpg" alt="last_one">
 
-    <p id="target-number"></p>
+    <p id="target-number">Your Target Number Is: </p>
     <p id="users-current-score">Your Total Score Is: </p>
     <h3 id="wins">Wins: </h3>
     <h3 id="losses">Losses:</h3>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="assets/javascript/game.js"></script>
+ 
+
 </body>
 </html>
