--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
     <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
-    
+
     <title>Crystals Collector Game</title>
 
 </head>
+
 <body>
 
-    <h1>Crystals Collector Game</h1>
+    <div id="container">
+        <h1>Crystals Collector Game</h1>
 
-    <p>You will be given a random number at the start of the game.</p>
-    <p>There are four crystals below. By clicking on a crystal you will add a spesific amount of points to your score.</p>
-    <p>You win the game by matching your score to a random number. You lose the game if your score goes over the random number. </p>
-    <p>The value of each crystal is hidden from you until you click on it.</p>
-    <p>Each time the game restarts, the values of each crystal will change.</p>
+        <p>You will be given a random number at the start of the game.</p>
+        <p>There are four crystals below. By clicking on a crystal you will add a spesific amount of points to your
+            score.</p>
+        <p>You win the game by matching your score to a random number. You lose the game if your score goes over the
+            random number. </p>
+        <p>The value of each crystal is hidden from you until you click on it.</p>
+        <p>Each time the game restarts, the values of each crystal will change.</p>
 
-    <img id="img1" class="crystalimg" src="assets/images/image1.jpg" alt="crystal">
-    <img id="img2" class="crystalimg" src="assets/images/image2.jpg" alt="another_crystal">
-    <img id="img3" class="crystalimg" src="assets/images/image3.jpg" alt="third_crystal">
-    <img id="img4" class="crystalimg" src="assets/images/image4.jpg" alt="last_one">
+        <img id="img1" class="crystalimg" src="assets/images/image1.jpg" alt="crystal">
+        <img id="img2" class="crystalimg" src="assets/images/image2.jpg" alt="another_crystal">
+        <img id="img3" class="crystalimg" src="assets/images/image3.jpg" alt="third_crystal">
+        <img id="img4" class="crystalimg" src="assets/images/image4.jpg" alt="last_one">
 
-    <p id="target-number">Your Target Number Is: </p>
-    <p id="users-current-score">Your Total Score Is: </p>
-    <h3 id="wins">Wins: </h3>
-    <h3 id="losses">Losses:</h3>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <p id="target-number">Your Target Number Is: </p>
+        <p id="users-current-score">Your Total Score Is: </p>
+        <h3 id="wins">Wins: </h3>
+        <h3 id="losses">Losses:</h3>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
- 
+
 
 </body>
+
 </html>
